# quiz_app_backend

./: .gitignore  alembic.ini  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0e3d8ba85814_added_uique_in_email.py  12452c35ece6_add_uniqe_constrain_in_quizattempt.py  33c8823f4f4e_add_a_new_field_in_quizattempt_table.py  5d418e0dc78c_add_description_of_changes.py  668e72a5571a_add_a_new_column_in_quizattempt_shuffle_.py  78f0bc4e10e0_fix_all_cascade_deletes_and_fks.py  818a7bb2bddb_added_two_new_columns_in_quz_table.py  b42bcb4c22cb_add_cascade_deletes_for_quiz_question_.py  b703c8283483_update_uniqe_constrain_in_quizattempt_.py  dc349f4878ac_fix_cascade_deletes_for_quizattempt.py
app/: db.py  main.py
app/auth/: admin.py  deps.py  login.py  utils.py
app/config/: settings.py
app/crud/: option_crud.py  question_crud.py  quiz_answer_crud.py  quiz_attempt_crud.py  quiz_crud.py  quiz_result_crud.py  role_crud.py  user_crud.py
app/models/: quiz.py  user.py
app/routers/: option_router.py  question_router.py  quiz_answer_router.py  quiz_attempt_router.py  quiz_result_router.py  quiz_router.py  role_router.py  user_router.py
app/schemas/: quiz_schema.py  user_schema.py
